# furiganapad

./: CONTRIBUTING.md  Makefile  Makefile.am  NOTICE  README.md  README.txt  README_en.md  configure.ac  convert_to_tag.py  furiganapad.desktop  furiganapad.in  furiganapad.ja_JP.json  furiganapad.menu.ja_JP.ui  furiganapad.py  furiganapad.spec  furiganapad.spec.in  furiganapad.spec.in.in  gettext.py  meson.build  setup.cfg
data/: com.esrille.furiganapad.desktop.in  com.esrille.furiganapad.metainfo.xml.in  furiganapad.json  furiganapad.menu.ja_JP.ui  meson.build
data/icons/: meson.build
debian/: changelog  changelog.in  control  copyright  rules
docs/: Makefile.am  default.css  hiragana_ime.html  hiragana_ime.md  index.html  index.md  install.html  install.md  md2html.py  meson.build  screenshot.webm  specification.html  specification.md  template.html  update  usage.html  usage.md
esrille_furiganapad/: application.py  furiganapad.py  textbuffer.py  textview.py  window.py
icons/: Makefile.am
locale/: Makefile.am  furiganapad.kids.po
man/: Makefile.am  furiganapad.1  meson.build
man/ja/: Makefile.am  furiganapad.1  meson.build
meson/: postinstall.py  update-changelog.sh
po/: POTFILES.in  furiganapad.pot  it.po  ja.po  meson.build
po.school/: POTFILES  furiganapad.school.pot  it.po  ja.po  meson.build
src/: Makefile.am  application.py  breaker.py  furiganapad.css  furiganapad.desktop  furiganapad.desktop.in  furiganapad.gresource.xml  furiganapad.in  furiganapad.in.in  furiganapad.menu.ui  i18n.py  main.py  meson.build  package.py.in  package.py.in.in  textbuffer.py  textview.py  window.py
tools/: Makefile.am  convert_to_tag.py
