application_id = 'com.esrille.furiganapad'

icon_96_dir = 'hicolor' / '96x96' / 'apps'
install_data(
  icon_96_dir / ('@0@.png').format(application_id),
  install_dir: get_option('datadir') / 'icons' / icon_96_dir
)

icon_128_dir = 'hicolor' / '128x128' / 'apps'
install_data(
  icon_128_dir / ('@0@.png').format(application_id),
  install_dir: get_option('datadir') / 'icons' / icon_128_dir
)
